--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
     "@types/node": "^16.18.24",
     "@types/react": "^18.0.38",
     "@types/react-dom": "^18.0.11",
-    "formik": "^2.4.1",
+    "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.10.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "styled-components": "^5.3.10",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "yup": "^1.2.0"
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,7 +50,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-input-mask": "^3.0.2",
+    "@types/react-input-mask": "^3.0.5",
+    "@types/react-router-hash-link": "^2.4.9",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
