--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "efood",
+  "name": "ebac_efood",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.24",
-    "@types/react": "^18.0.38",
-    "@types/react-dom": "^18.0.11",
-    "formik": "^2.4.1",
+    "@types/node": "^16.18.38",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@types/react-input-mask": "^3.0.2",
+    "formik": "^2.4.2",
+    "framer-motion": "^10.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.10.0",
+    "react-redux": "^8.1.1",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
-    "styled-components": "^5.3.10",
+    "styled-components": "^6.0.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
@@ -49,15 +48,14 @@
     ]
   },
   "devDependencies": {
-    "@types/react-input-mask": "^3.0.2",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
-    "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-prettier": "^5.0.0-alpha.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "2.8.8"
+    "jest": "^27.5.1",
+    "prettier": "3.0.0"
   }
 }
